--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,1 @@
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      default-zone: http://localhost:8761/eureka/
-  instance:
-    hostname: localhost
+com.nlkhang.secrectkey = abc
